--- a/home/index.html
+++ b/home/index.html
@@ -13,5 +13,11 @@
         <a href="" class="categorys">Category's</a>
         <a href="" class="contact">Contact</a>
     </div>
+
+    <div class="title-div">
+        <h1 class="title">Welcome to Musicer</h1>
+        <h3 class="subtitle">Your one-stop music solution</h3>
+    </div>
+
 </body>
 </html>
