--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/musicplayer/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musicer | By: szab1_</title>
 </head>
 <body>
     <div class="navbar">
-        <a href="/musicplayer/index.html" class="home">Home</a>
+        <a href="index.html" class="home">Home</a>
         <a href="" class="featured">Featured</a>
         <a href="" class="categorys">Category's</a>
         <a href="" class="contact">Contact</a>
