--- a/index.html
+++ b/index.html
@@ -19,5 +19,21 @@
         <h3 class="subtitle">Your one-stop music solution</h3>
     </div>
 
+        <div class="box-container">
+        <div class="box">
+            <h2>Discover New Music</h2>
+            <p>Explore a wide range of genres and find your next favorite track.</p>
+        </div>
+        <div class="box">
+            <h2>Create Playlists</h2>
+            <p>Organize your music into playlists for every mood and occasion.</p>
+        </div>
+        <div class="box">
+            <h2>Share with Friends</h2>
+            <p>Share your favorite tracks and playlists with friends and family.</p>
+        </div>
+        
+    </div>
+
 </body>
 </html>
