--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             <h2>Discover New Music</h2>
             <p>Explore a wide range of genres and find your next favorite track.</p>
         </div>
+        <div class="line"></div>
         <div class="box">
             <h2>Create Playlists</h2>
             <p>Organize your music into playlists for every mood and occasion.</p>
         </div>
+        <div class="line"></div>
         <div class="box">
             <h2>Share with Friends</h2>
             <p>Share your favorite tracks and playlists with friends and family.</p>
